# zksync-era

core/lib/object_store/: Cargo.toml
core/lib/types/: Cargo.toml
core/lib/vm/: Cargo.toml
