[package]
name = "zksync_object_store"
version = "1.0.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-2"
license = "Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[dependencies]
zksync_config = { path = "../../lib/config", version = "1.0" }
zksync_types = { path = "../types", version = "1.0" }

bincode = "1"
google-cloud-storage = { git = "https://github.com/yoshidan/google-cloud-rust", rev = "c4f47b5df820fbdeabd24db7d6ef85969ef948c6" }
google-cloud-auth = { git = "https://github.com/yoshidan/google-cloud-rust", rev = "c4f47b5df820fbdeabd24db7d6ef85969ef948c6"}
google-cloud-default = { git = "https://github.com/yoshidan/google-cloud-rust", rev = "c4f47b5df820fbdeabd24db7d6ef85969ef948c6", features = ["storage", "google-cloud-metadata"]}
http = "0.2.9"
metrics = "0.20"
tokio = { version = "1.21.2", features = ["full"] }
vlog = { path = "../vlog", version = "1.0" }

[dev-dependencies]
tempdir = "0.3.7"
